logs/celery-tasks-ctl.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/amqp'...
Compiling './lib/python3.5/site-packages/amqp/connection.py'...
***   File "./lib/python3.5/site-packages/amqp/connection.py", line 300
    except SSLError, exc:
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/amqp-1.0.13.egg-info'...
Listing './lib/python3.5/site-packages/anyjson'...
Listing './lib/python3.5/site-packages/anyjson-0.3.3.egg-info'...
Listing './lib/python3.5/site-packages/billiard'...
Listing './lib/python3.5/site-packages/billiard/dummy'...
Listing './lib/python3.5/site-packages/billiard-3.5.0.3.dist-info'...
Listing './lib/python3.5/site-packages/celery'...
Listing './lib/python3.5/site-packages/celery/app'...
Listing './lib/python3.5/site-packages/celery/apps'...
Listing './lib/python3.5/site-packages/celery/backends'...
Compiling './lib/python3.5/site-packages/celery/backends/cassandra.py'...
***   File "./lib/python3.5/site-packages/celery/backends/cassandra.py", line 113
    Thrift.TException), exc:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/celery/backends/database'...
Listing './lib/python3.5/site-packages/celery/bin'...
Listing './lib/python3.5/site-packages/celery/concurrency'...
Listing './lib/python3.5/site-packages/celery/concurrency/processes'...
Listing './lib/python3.5/site-packages/celery/contrib'...
Listing './lib/python3.5/site-packages/celery/events'...
Listing './lib/python3.5/site-packages/celery/loaders'...
Listing './lib/python3.5/site-packages/celery/security'...
Listing './lib/python3.5/site-packages/celery/task'...
Listing './lib/python3.5/site-packages/celery/tests'...
Listing './lib/python3.5/site-packages/celery/tests/app'...
Listing './lib/python3.5/site-packages/celery/tests/backends'...
Listing './lib/python3.5/site-packages/celery/tests/bin'...
Listing './lib/python3.5/site-packages/celery/tests/compat_modules'...
Listing './lib/python3.5/site-packages/celery/tests/concurrency'...
Listing './lib/python3.5/site-packages/celery/tests/contrib'...
Listing './lib/python3.5/site-packages/celery/tests/events'...
Listing './lib/python3.5/site-packages/celery/tests/functional'...
Listing './lib/python3.5/site-packages/celery/tests/security'...
Listing './lib/python3.5/site-packages/celery/tests/slow'...
Listing './lib/python3.5/site-packages/celery/tests/tasks'...
Listing './lib/python3.5/site-packages/celery/tests/utilities'...
Listing './lib/python3.5/site-packages/celery/tests/worker'...
Listing './lib/python3.5/site-packages/celery/utils'...
Listing './lib/python3.5/site-packages/celery/utils/dispatch'...
Listing './lib/python3.5/site-packages/celery/worker'...
Listing './lib/python3.5/site-packages/celery-3.0.23.egg-info'...
Listing './lib/python3.5/site-packages/celery_tasks_ctl'...
Compiling './lib/python3.5/site-packages/celery_tasks_ctl/celery_tasks_ctl.py'...
***   File "./lib/python3.5/site-packages/celery_tasks_ctl/celery_tasks_ctl.py", line 195
    print 'Version %s' % __version__
                     ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/celery_tasks_ctl-0.2.1.egg-info'...
Listing './lib/python3.5/site-packages/dateutil'...
Listing './lib/python3.5/site-packages/dateutil/tz'...
Listing './lib/python3.5/site-packages/dateutil/zoneinfo'...
Listing './lib/python3.5/site-packages/docopt-0.6.1.egg-info'...
Listing './lib/python3.5/site-packages/kombu'...
Listing './lib/python3.5/site-packages/kombu/tests'...
Listing './lib/python3.5/site-packages/kombu/tests/transport'...
Listing './lib/python3.5/site-packages/kombu/tests/transport/virtual'...
Listing './lib/python3.5/site-packages/kombu/tests/utilities'...
Listing './lib/python3.5/site-packages/kombu/transport'...
Listing './lib/python3.5/site-packages/kombu/transport/django'...
Listing './lib/python3.5/site-packages/kombu/transport/django/management'...
Listing './lib/python3.5/site-packages/kombu/transport/django/management/commands'...
Listing './lib/python3.5/site-packages/kombu/transport/django/migrations'...
Listing './lib/python3.5/site-packages/kombu/transport/sqlalchemy'...
Listing './lib/python3.5/site-packages/kombu/transport/virtual'...
Listing './lib/python3.5/site-packages/kombu/utils'...
Listing './lib/python3.5/site-packages/kombu-2.5.16.egg-info'...
Listing './lib/python3.5/site-packages/pika'...
Listing './lib/python3.5/site-packages/pika/adapters'...
Compiling './lib/python3.5/site-packages/pika/adapters/base_connection.py'...
***   File "./lib/python3.5/site-packages/pika/adapters/base_connection.py", line 200
    except ssl.SSLError, err:
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pika/adapters/select_connection.py'...
***   File "./lib/python3.5/site-packages/pika/adapters/select_connection.py", line 255
    except select.error, error:
                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pika-0.9.13.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/python_dateutil-2.6.1.dist-info'...
Listing './lib/python3.5/site-packages/pytz'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Africa'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Argentina'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Indiana'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Kentucky'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/North_Dakota'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Antarctica'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Arctic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Asia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Atlantic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Australia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Brazil'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Canada'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Chile'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Etc'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Europe'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Indian'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Mexico'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Pacific'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/US'...
Listing './lib/python3.5/site-packages/pytz-2017.3.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests/packages'...
Listing './lib/python3.5/site-packages/requests/packages/charade'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/requests-1.1.0.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/tests'...
Listing './share'...
Listing './share/python-wheels'...
